slight font sizing issue causing mobile layout problems

--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -20,7 +20,7 @@ html, body {
 }
 
 html {
-  font-size: 16px;
+  font-size: 15px;
 }
 
 /* * {
